# rossmann-sales-forecast

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_feature_analysis.ipynb  03_results_presentation.ipynb
scripts/: evaluate.py  predict.py  train.py
src/rossmann/: config.py  pipeline.py
src/rossmann/data/: cleaner.py  loader.py  splitter.py
src/rossmann/evaluation/: metrics.py
src/rossmann/features/: calendar.py  competition.py  lags.py  promotions.py
src/rossmann/models/: base.py  baseline.py  lgbm_model.py  statsforecast_model.py
tests/: conftest.py  test_features.py  test_metrics.py  test_pipeline.py  test_splitter.py
