[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rossmann-sales-forecast"
version = "0.1.0"
description = "Store-level sales forecasting on the Kaggle Rossmann dataset (LightGBM + StatsForecast)."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Devika Rajasekar" }]
dependencies = [
    "pandas>=2.0",
    "numpy<2.0",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "optuna>=3.4",
    "statsforecast>=1.7",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "black>=23.0",
]
explain = [
    "shap>=0.44",
]
notebook = [
    "jupyter>=1.0",
    "seaborn>=0.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
